--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Lato:wght@300;700&family=Poppins:wght@100;300;400;500;600;700;800;900&family=Roboto:wght@400;500;700&display=swap');
-body {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body {
   font-family: 'Poppins', sans-serif;
+}
+a{
+  text-decoration: none;
+}
+input{
+  border: none;
+  outline: none;
+  font-family: 'Poppins', sans-serif;
+}
+button{
+  border: none;
+  outline: none;
+  font-family: 'Poppins', sans-serif;
+}
+li{
+  list-style-type: none;
 }
