--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -101,6 +101,9 @@
         display: flex;
         flex-direction: column;
         top: 0;
+        transition: all 0.3s ease-in-out;
+        opacity: 0.95;
+        z-index: 100;
 
     }
     .bar{
@@ -109,11 +112,11 @@
     .block{
         display: block;
     }
-    .nav a{
+    .nav ul a{
         color: rgb(238, 234, 234);
         font-weight: 450;
     }
-    .nav a:hover{
+    .nav ul a:hover{
         color: #fff;
         
     }
