--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,14 @@ button{
 li{
   list-style-type: none;
 }
+.mySwiper{
+  width: 100%;
+  height: 90vh;
+  background-color: #eee;
+  position: relative;
+}
+img{
+  height: 100%;
+  object-fit: cover;
+
+}
