--- a/src/components/Destination/Destination.module.css
+++ b/src/components/Destination/Destination.module.css
@@ -1,6 +1,22 @@
 .container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    gap: 20px;
-    padding:30px
+    padding:20px 20px;
+    gap: 30px;
+}
+
+
+@media (max-width: 450px){
+    .container{
+        padding:20px 10px;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+    }
+}
+@media (max-width: 370px){
+    .container{
+        padding:20px 5px;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+    }
 }
