--- a/src/components/Destination/destinationcard/HotelCard.module.css
+++ b/src/components/Destination/destinationcard/HotelCard.module.css
@@ -1,7 +1,38 @@
 .container{
-    border: 1px solid #ccc;
+    margin:0 auto;
+    -webkit-box-shadow: 11px 12px 6px -8px rgba(0,0,0,0.16);
+    box-shadow: 11px 12px 6px -8px rgba(0,0,0,0.16);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    overflow: hidden;
 }
 .container img{
     width: 100%;
     height:300px
+}
+.container h2,h3{
+    text-align: center;
+    color: #333;
+    font-weight: 620;
+}
+.container a {
+    color: rgb(238, 236, 236);
+    background-color:rgb(7, 161, 105);
+    font-weight:450;
+    font-size:18px;
+    width: 100px;
+    text-align: center;
+    border-radius: 5px;
+    margin: 10px auto;
+    display: block;
+    transition: all 0.3s ease-in-out;
+
+
+}
+.container a:hover{
+    background-color:#31b675;
+    color: #fff;
 }
