--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ button{
 li{
   list-style-type: none;
 }
-.mySwiper{
+.mySwiper1{
   width: 100%;
   height: 90vh;
   background-color: #eee;
@@ -33,4 +33,7 @@ img{
   height: 100%;
   object-fit: cover;
 
+}
+.mySwiper{
+  background-color: #eee;
 }
