--- a/src/components/Home/HomeComp/Works/Work.module.css
+++ b/src/components/Home/HomeComp/Works/Work.module.css
@@ -8,7 +8,7 @@
 }
 .card{
     text-align:center;
-    padding: 10px;
+    padding:30px 10px;
     -webkit-box-shadow: 11px 12px 6px -8px rgba(0,0,0,0.16);
     box-shadow: 11px 12px 6px -8px rgba(0,0,0,0.16);
     background-color: #fff;
